# marimari-api

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: api.rs  app.rs  builder.rs  main.rs
context/: Cargo.toml
context/app_context/: Cargo.toml
context/app_context/src/: lib.rs
context/src/: lib.rs
docs/: er.md  usecase.md
domain/: Cargo.toml
domain/src/: user.rs  user_repository.rs
infra/api_server/: Cargo.toml
infra/api_server/src/: api.rs  error_handler.rs  extracter.rs  lib.rs  user.rs
infra/api_server/src/users/: create.rs  get.rs  mod.rs
infra/db_schema/: Cargo.toml
infra/db_schema/migrations/2022-10-09-025906_create_users/: up.sql
infra/db_schema/src/: lib.rs  schema.rs
infra/diesel_repository/: Cargo.toml
infra/diesel_repository/src/: user_repository.rs
infra/dynamodb_repository/: Cargo.toml
infra/dynamodb_repository/src/: user_repository.rs
infra/lambda_server/: Cargo.toml
infra/lambda_server/src/: api.rs  error.rs  lib.rs  user.rs
src/: main.rs
tests/: Cargo.toml
tests/src/: api.rs
usecase/: Cargo.toml
usecase/src/: create_user.rs  user.rs
