[package]
edition = "2021"
name = "marimari-api"
version = "0.1.0"

[dependencies]
axum = "0.5"
axum-macros = "0.2.3"
mime = "0.3"
serde_json = "1.0"
tracing = "0.1"
url = "2.2.2"
diesel = { version = "2.0.1", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
anyhow = "1.0.65"
serde = "1.0.145"
async-trait = "0.1.57"
derive-new = "0.5.9"
derive-getters = "0.2.0"

domain = { path = "../domain" }
usecase = { path = "../usecase" }
diesel_repository = { path = "../infra/diesel_repository" }
app_context = { path = "../context/app_context" }
error = { path = "../common/error" }

[dependencies.hyper]
features = ["full"]
version = "0.14"

[dependencies.lambda-web]
features = ["hyper"]
version = "0.2.0"

[dependencies.tokio]
features = ["full"]
version = "1.21.1"

[dependencies.tower]
features = ["full"]
version = "0.4"

[dependencies.tower-http]
features = ["trace"]
version = "0.3.0"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3"

[dev-dependencies]
axum-test-helper = "0.1.1"
