[package]
edition = "2021"
name = "marimari-api"
version = "0.1.0"

[dependencies]
url = "2.2.2"
diesel = { version = "2.0.1", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
anyhow = "1.0.65"
tokio = { version = "1.21.1", features = ["full"] }

domain = { path = "../domain" }
usecase = { path = "../usecase" }
diesel_repository = { path = "../infra/diesel_repository" }
lambda_server = { path = "../infra/lambda_server" }
app_context = { path = "../context/app_context" }
error = { path = "../common/error" }
