[package]
edition = "2021"
name = "marimari-api"
version = "0.1.0"

[dependencies]
url = "2.2.2"
diesel = { version = "2.0.1", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
anyhow = "1.0.65"
tokio = { version = "1.21.1", features = ["full"] }
axum = "0.5.16"
lambda-web = { version = "0.2.0", features = ["hyper"] }
lambda_runtime = "0.7.0"

domain = { path = "../domain" }
usecase = { path = "../usecase" }
diesel_repository = { path = "../infra/diesel_repository" }
api_server = { path = "../infra/api_server" }
app_context = { path = "../context/app_context" }
error = { path = "../common/error" }
