[package]
name = "usecase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
typed-builder = "0.10.0"

domain = { path = "../domain" }
app_context = { path = "../context/app_context" }

[dependencies.tokio]
features = ["full"]
version = "1.21.1"