[package]
name = "diesel_repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.1", features = ["postgres", "r2d2"] }
dotenvy = "0.15.5"
async-trait = "0.1.57"
anyhow = "1.0.65"
r2d2 = "0.8.10"

db_schema = { path = "../db_schema" }
domain = { path = "../../domain" }
derive-new = "0.5.9"
tokio = "1.21.2"

